# quotes_bot

./: README.md  connect.py  pyproject.toml  queries.py  seeds.py
