[tool.poetry]
name = "atlas mongodb, redis"
version = "0.1.0"
description = ""
authors = ["baskina <katyabaskina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.6.3"
mongoengine = "^0.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

